@@ -1,3 +1,12 @@
+2009-05-26  Thomas Moulard  <thomas.moulard@gmail.com>
+
+	Use new function interface.
+	* src/Makefile.am: Link against lapack for now.
+	* src/roboptim-core-ipopt-plugin.cc
+	* tests/hs071.hh: Use new function interface.
+	* tests/plugin.stdout,
+	* tests/simple.stdout: Regenerate.
+
 2009-05-14  Thomas Moulard  <thomas.moulard@gmail.com>
 
 	Handle failures proplery.
